src/pj/poco/test/neg/NARRVAR.POC
/* Test using an array as an integer */
#pragma poco echo "expect>cannot do pointer<->number conversion"

char isanarray[10];

main()
{
if (isanarray == 10)
	puts("strange coincedence");
puts("I shouldn't compile");
}
